# coreConnectPython

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: example.py
src/: core_connect.py  test.py
src/core_connect/: __init__.py  core_connect.py
tests/: test.py
