[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coreconnect"
version = "2.1.0"
authors = [
  { name="Timo Hofmann", email="t.hofmann@inolares.de" },
  { name="Sascha Pfalz", email="s.pfalz@inolares.de" }
]
description = "Python package to communicate via REST API with our InoCore"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'requests >= "2.28.0"',
    'validators >= "0.20.0'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS"
]

[project.urls]
"Homepage" = "https://github.com/inolares/coreConnectPython"
"Bug Tracker" = "https://github.com/inolares/coreConnectPython/issues"