[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "core_connect"
version = "2.1.1"
authors = [
  { name="Timo Hofmann", email="t.hofmann@inolares.de" },
  { name="Sascha Pfalz", email="s.pfalz@inolares.de" }
]
license = "BSD-3-Clause"
description = "Python package to communicate via REST API with our InoCore"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests >= 2.28.0",
    "validators ~= 0.20.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS"
]

[project.urls]
"Homepage" = "https://github.com/inolares/coreConnectPython"
"Bug Tracker" = "https://github.com/inolares/coreConnectPython/issues"